--- a/back/package.json
+++ b/back/package.json
@@ -12,7 +12,9 @@
   "author": "Jessy,Sophie,Marine,Alexis",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "mysql": "^2.17.1",
     "nodemon": "^2.0.1"
   }
 }
