--- a/front/package.json
+++ b/front/package.json
@@ -6,6 +6,7 @@
     "axios": "^0.19.0",
     "react": "^16.12.0",
     "react-calendar": "^2.19.2",
+    "react-datetime": "^2.16.3",
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.3.0"
