--- a/front/package.json
+++ b/front/package.json
@@ -11,8 +11,10 @@
     "react-datetime": "^2.16.3",
     "react-dom": "^16.12.0",
     "react-modal": "^3.11.1",
+    "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "^3.3.0"
+    "react-scripts": "^3.3.0",
+    "redux": "^4.0.5"
   },
   "scripts": {
     "start": "react-scripts start",
